--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,10 @@
 <% #------------------------------------------------------- %>
 <% # Section0: (CSS: doc#header) -Global- %>
   <% # <header> Page Header  %>
-  <%= render 'layouts/page_header' %>
-   <% # <nav> Page Header navigation  %>
+  <% if @view.policy(:include, :header) %>
+    <%= render 'layouts/page_header' %>
+     <% # <nav> Page Header navigation  %>
+  <% end %>
 <% #------------------------------------------------------- %>
 <% # Section1: (CSS: doc#main) -Global- %>
   <% # <main> Page Content  %>
@@ -41,8 +43,10 @@
 <% #------------------------------------------------------- %>
 <% # Section2: (CSS: doc#footer) Global %>
   <% # <footer> Page Footer %>
-  <%= render 'layouts/page_footer' %>
-    <% # <nav> Page Footer navigation  %>
+  <% if @view.policy(:include, :footer) %>
+    <%= render 'layouts/page_footer' %>
+      <% # <nav> Page Footer navigation  %>
+  <% end %>
 <% #------------------------------------------------------- %>
 </div>
 </body>
