[WIP].3-sign-up: Add OmniauthProvider model for multiple oauth servers, i.e. Slack, GitHub.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -129,7 +129,7 @@ body {
 }
 
 /*=================== Special layout for Add to Slack button landing page */
-.css-pages-add_to_slack {
+.css-pages-add_to_slack, .css-pages-welcome_add_to_slack_new {
   .jumbotron {
     background-color: white;
     margin-bottom: 0px;
