[WIP].4-slack-integrations: Add bot and slash commands to ShadowHtracTeam for testing.

--- a/app/views/layouts/_page_footer_created_by.html.erb
+++ b/app/views/layouts/_page_footer_created_by.html.erb
@@ -5,7 +5,7 @@ Created by
    data-placement="top"
    data-trigger="hover"
    data-html="true"
-   data-content="<img src='https://cdn-photos.bloc.io/medium/2317655/photo.JPG?1450380571'>"
+   data-content="<img width='80px' height='80px' src='https://cdn-photos.bloc.io/medium/2317655/photo.JPG?1450380571'>"
    >A student at Block.io
 </a>
 <% #who is on %>
