[WIP].4a-slack-integrations-rebase: Add User roles, admin, some rspec tests.

--- a/app/views/layouts/_page_header_navbar_right.html.erb
+++ b/app/views/layouts/_page_header_navbar_right.html.erb
@@ -2,7 +2,12 @@
   <ul class="nav navbar-nav pull-right">
 
     <% if @view.user_signed_in? %>
-      <% if true # policy(RegisteredApplication).index? %>
+      <% if @view.current_user.admin? %>
+        <li><%= link_to 'Admin Dashboard',
+                users_path,
+                class: 'css-apps-link' %></li>
+        <li><%= link_to '|', '' %></li>
+      <% elsif true # policy(Team).index? %>
         <li><%= link_to 'My Teams',
                 'registered_applications_path',
                 class: 'css-apps-link' %></li>
