[WIP]5.Implement-add-list: Push to heroku

--- a/app/views/pages/welcome_add_to_slack_new.html.erb
+++ b/app/views/pages/welcome_add_to_slack_new.html.erb
@@ -12,7 +12,7 @@
           <br><br>
           <p>Start managing lists for your Slack teams in
             <%= link_to 'Slack', @view.team.url, class: 'btn btn-primary btn-sm' %>
-            &nbsp;or here in <%= link_to 'MiaDo', 'registered_teams_path' %>.
+            &nbsp;or here in <%= link_to 'MiaDo', teams_path %>.
           </p>
           <br>
           <div class="row">
