--- a/app/views/users/admin_views/_index.html.erb
+++ b/app/views/users/admin_views/_index.html.erb
@@ -13,6 +13,7 @@
           <th>Name</th>
           <th>Email</th>
           <th>SignUp Date</th>
+          <th><%= link_to 'Oauth Providers', omniauth_providers_path %><%= " (#{@view.providers.count})" %></th>
           <th><%= link_to 'Teams', teams_path %><%= " (#{@view.teams.count})" %></th>
         </tr>
       </thead>
