--- a/app/views/layouts/_page_footer_created_by.html.erb
+++ b/app/views/layouts/_page_footer_created_by.html.erb
@@ -1,12 +1,14 @@
 Created by
 <a href="#"
    data-toggle="popover"
-   title="A student at Block.io"
+   title=""
    data-placement="top"
    data-trigger="hover"
    data-html="true"
    data-content="<img width='80px' height='80px' src='https://cdn-photos.bloc.io/medium/2317655/photo.JPG?1450380571'>"
-   >A student at Block.io
+   >Ray
+   <% #title="A student at Block.io" %>
+   <% #A student at Block.io %>
 </a>
 <% #who is on %>
   <% #= link_to 'LinkedIn', 'https://www.linkedin.com/in/raynovarina' %>
