--- a/app/views/users/admin_views/_index_team.html.erb
+++ b/app/views/users/admin_views/_index_team.html.erb
@@ -1,8 +1,8 @@
-<% if @view.locals[:teams_index] > 0 %>
-  </tr>
-  <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+<% if @view.locals[:team] == nil %>
+  <td>&nbsp;</td>
+<% else %>
+  <td><%= link_to @view.locals[:team].name,
+              team_path(@view.locals[:team]),
+              title: "Team added #{@view.locals[:team].created_at.strftime("%a, %d %b %Y")}" %>
+  </td>
 <% end %>
-<td><%= link_to @view.locals[:team].name,
-            team_path(@view.locals[:team]),
-            title: "Team added #{@view.locals[:team].created_at.strftime("%a, %d %b %Y")}" %>
-</td>
