13.admin-dashboard: Add reports for Oauth providers, teams, members, channels, task lists to Admin Dashboard.

--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Channels#show</h1>
-<p>Find me in app/views/channels/show.html.erb</p>
+<%= render partial: 'channels/admin_views/show',
+           locals: @view.locals = {}
+%>
