--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Members#index</h1>
-<p>Find me in app/views/members/index.html.erb</p>
+<%= render partial: 'members/admin_views/index',
+           locals: @view.locals = {}
+%>
