--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Channels#index</h1>
-<p>Find me in app/views/channels/index.html.erb</p>
+<%= render partial: 'channels/admin_views/index',
+           locals: @view.locals = {}
+%>
