--- a/app/views/layouts/_page_header_navbar_admin_picklist.html.erb
+++ b/app/views/layouts/_page_header_navbar_admin_picklist.html.erb
@@ -13,8 +13,8 @@
     <li class="divider"></li>
     <li><%= link_to "Channels", channels_path %></li>
     <li class="divider"></li>
-    <li><%= link_to "Channel Lists", omniauth_providers_path %></li>
+    <li><%= link_to "Channel Lists", items_path %></li>
     <li class="divider"></li>
-    <li><%= link_to "Bot Lists", omniauth_providers_path %></li>
+    <li><%= link_to "Bot Lists", '#' %></li>
   </ul>
 </li>
