--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Members#show</h1>
-<p>Find me in app/views/members/show.html.erb</p>
+<%= render partial: 'members/admin_views/show',
+           locals: @view.locals = {}
+%>
