[WIP].bug-fixes-and-feature-changes: Fixed add cmd problem: 'Error: Member @suemanley1 / not found.'

--- a/app/views/members/admin_views/_index_team.html.erb
+++ b/app/views/members/admin_views/_index_team.html.erb
@@ -1,4 +1,4 @@
-<h3><%= "Members(#{team.members.size}) for Team #{team.name} added by #{team.user.name}" %></h3>
+<h3><%= "Members(#{team.members.size}) for Team #{team.name}(#{team.slack_team_id}) added by #{team.user.name}" %></h3>
 <% unless @view.locals[:team].members.empty? %>
   <table class="table table-bordered table-hover">
     <thead>
