[WIP].bug-fixes-and-feature-changes: Admin console: Add slack api token to Teams display.

--- a/app/views/omniauth_providers/admin_views/_index.html.erb
+++ b/app/views/omniauth_providers/admin_views/_index.html.erb
@@ -11,7 +11,8 @@
       <thead>
         <tr>
           <th>Name</th>
-          <th>Creation Date</th>
+          <th>Created</th>
+          <th>Updated</th>
           <th>info.team</th>
           <th>uid_name</th>
           <th>uid_email</th>
