--- a/app/views/teams/admin_views/_index.html.erb
+++ b/app/views/teams/admin_views/_index.html.erb
@@ -12,6 +12,9 @@
         <tr>
           <th>Name</th>
           <th>Added By</th>
+          <th>Added On</th>
+          <th>Updated On</th>
+          <th>Api Token</th>
           <th>Members</th>
           <th>Channels</th>
           <th>Channel Lists</th>
