--- a/app/views/teams/admin_views/_index_team.html.erb
+++ b/app/views/teams/admin_views/_index_team.html.erb
@@ -4,14 +4,11 @@
                   title: "Created on #{@view.locals[:team].created_at.strftime('%a, %d %b %Y')}" %>
   </td>
   <td><%= link_to @view.locals[:user].name, user_path(@view.locals[:user]) %></td>
-  <td><%= link_to 'Members', team_members_path(@view.locals[:team]) %>
-      <%= " (#{@view.locals[:team].members.length})" %>
-  </td>
-  <td><%= link_to 'Channels', team_channels_path(@view.locals[:team]) %>
-      <%= " (#{@view.locals[:team].channels.length})" %>
-  </td>
-  <td><%= link_to 'Channel Lists', team_items_path(@view.locals[:team]) %>
-      <%= " (#{@view.locals[:team].channels.length})" %>
-  </td>
-  <td>Bot Lists</td>
+  <td><%= @view.locals[:team].created_at.strftime('%a, %d %b %Y') %></td>
+  <td><%= @view.locals[:team].updated_at.strftime('%a, %d %b %Y') %></td>
+  <td><%= @view.locals[:team].api_token %></td>
+  <td><%= link_to " (#{@view.locals[:team].members.length})", team_members_path(@view.locals[:team]) %></td>
+  <td><%= link_to " (#{@view.locals[:team].channels.length})", team_channels_path(@view.locals[:team]) %></td>
+  <td><%= link_to " (#{@view.locals[:team].channels.length})", team_items_path(@view.locals[:team]) %></td>
+  <td>(0)</td>
 </tr>
