--- a/app/views/members/admin_views/_index_team.html.erb
+++ b/app/views/members/admin_views/_index_team.html.erb
@@ -5,6 +5,7 @@
       <tr>
         <th>Slack User Name</th>
         <th>Real Name</th>
+        <th>is_bot?</th>
         <th>Slack User Id</th>
         <th>Added To MiaDo on Date</th>
         <th>Last Updated Date</th>
