--- a/app/views/channels/admin_views/_index_team.html.erb
+++ b/app/views/channels/admin_views/_index_team.html.erb
@@ -4,7 +4,10 @@
     <thead>
       <tr>
         <th>Name</th>
-        <th>Slack Channel Id</th>
+        <th>Slack Chan Id</th>
+        <th>Dm Chan?</th>
+        <th>Archived?</th>
+        <th>Deleted</th>
         <th>Added To MiaDo on Date</th>
         <th>Last Updated Date</th>
         <th>Tasks</th>
