--- a/app/views/omniauth_providers/admin_views/_index.html.erb
+++ b/app/views/omniauth_providers/admin_views/_index.html.erb
@@ -17,7 +17,7 @@
           <th>uid_name</th>
           <th>uid_email</th>
           <th>uid</th>
-          <th>auth_token</th>
+          <th>auth_token(last 25 digits)</th>
         </tr>
       </thead>
       <tbody>
