--- a/app/views/omniauth_providers/admin_views/_index_provider.html.erb
+++ b/app/views/omniauth_providers/admin_views/_index_provider.html.erb
@@ -1,13 +1,13 @@
 <tr>
   <td><%= @view.locals[:provider].name %></td>
   <td><%= @view.locals[:provider].created_at.strftime("%a, %d %b %Y") %></td>
-  <td><%= @view.locals[:provider].updated_at.strftime("%a, %d %b %Y") %></td>
+  <td><%= @view.locals[:provider].updated_at.strftime("%c") %></td>
   <td><%= @view.locals[:provider].auth_json.nil? ||
-          !@view.locals[:provider].auth_json['info'].key?('team') ? 'N/A' : @view.locals[:provider].auth_json['info']['team'] 
+          !@view.locals[:provider].auth_json['info'].key?('team') ? 'N/A' : @view.locals[:provider].auth_json['info']['team']
       %>
   </td>
   <td><%= @view.locals[:provider].uid_name %></td>
   <td><%= @view.locals[:provider].uid_email %></td>
   <td><%= @view.locals[:provider].uid %></td>
-  <td><%= @view.locals[:provider].auth_token %></td>
+  <td><%= @view.locals[:provider].auth_token.length > 25 ? @view.locals[:provider].auth_token[-25, 25] : @view.locals[:provider].auth_token %></td>
 </tr>
