[WIP]16.taskbot-channels: wip for members lookup hash.

--- a/app/views/layouts/_page_header_navbar_right.html.erb
+++ b/app/views/layouts/_page_header_navbar_right.html.erb
@@ -23,7 +23,8 @@
     <% else %>
         <li><%= link_to 'Sign In', new_user_session_path %></li>
         <li><%= link_to '|', '' %></li>
-        <li><%= link_to 'Sign Up', new_user_registration_path %></li>
+        <% #<li><%= link_to 'Sign Up', new_user_registration_path %#></li> %>
+        <li><%= link_to 'Sign Up', add_to_slack_path %></li>
     <% end %>
 
   </ul>
