--- a/app/views/members/admin_views/_index_member.html.erb
+++ b/app/views/members/admin_views/_index_member.html.erb
@@ -5,5 +5,5 @@
   <td><%= @view.locals[:member].deleted %></td>
   <td><%= @view.locals[:member].slack_user_id %></td>
   <td><%= @view.locals[:member].created_at.strftime("%a, %d %b %Y") %></td>
-  <td><%= @view.locals[:member].updated_at.strftime("%a, %d %b %Y") %></td>
+  <td><%= @view.locals[:member].updated_at.strftime("%c") %></td>
 </tr>
