--- a/app/views/channels/admin_views/_index_channel.html.erb
+++ b/app/views/channels/admin_views/_index_channel.html.erb
@@ -13,7 +13,7 @@
   %>
   <td><%= name %></td>
   <td><%= @view.locals[:channel].slack_channel_id %></td>
-  <td><%= @view.locals[:channel].is_im_channel %></td>
+  <td><%= @view.locals[:channel].dm_user_id %></td>
   <td><%= @view.locals[:channel].archived %></td>
   <td><%= @view.locals[:channel].deleted %></td>
   <td><%= @view.locals[:channel].created_at.strftime("%c") %></td>
