--- a/app/views/channels/admin_views/_index_team.html.erb
+++ b/app/views/channels/admin_views/_index_team.html.erb
@@ -5,7 +5,7 @@
       <tr>
         <th>Name</th>
         <th>Slack Chan Id</th>
-        <th>Dm Chan?</th>
+        <th>Dm User Id</th>
         <th>Archived?</th>
         <th>Deleted</th>
         <th>Added To MiaDo on Date</th>
