--- a/app/views/layouts/_page_header_navbar_right.html.erb
+++ b/app/views/layouts/_page_header_navbar_right.html.erb
@@ -3,8 +3,8 @@
 
     <% if @view.user_signed_in? %>
       <% if @view.current_user.admin? %>
-        <%= render 'layouts/page_header_navbar_admin_picklist' %>
-        <li><%= link_to '|', '' %></li>
+        <% #= render 'layouts/page_header_navbar_admin_picklist' %>
+        <% #<li><%= link_to '|', '' #%#></li>%>
       <% elsif true # policy(Team).index? %>
         <li><%= link_to 'My Teams',
                 user_teams_path(@view.current_user),
