--- a/app/views/pages/add_to_slack.html.erb
+++ b/app/views/pages/add_to_slack.html.erb
@@ -3,7 +3,11 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="jumbotron">
         <center>
-          <h1>MiaDo</h1>
+          <h1><a href="<%= root_path %>"
+                 style="color: black; text-decoration: none; cursor: default;">
+            MiaDo
+          </a>
+          </h1>
           <%= image_tag 'dog_head_icon.png', class: 'img-circle',
               style: 'margin-right: 20px;',
               size: '100x100' %>
