--- a/app/views/pages/add_to_slack.html.erb
+++ b/app/views/pages/add_to_slack.html.erb
@@ -1,33 +1,93 @@
 <div class="container-fluid css-add-to-slack">
   <div class="row">
-    <div class="col-md-10 col-md-offset-1">
-      <div class="jumbotron">
-        <center>
-          <h1><a href="<%= root_path %>"
-                 style="color: black; text-decoration: none; cursor: default;">
-            MiaDo
-          </a>
-          </h1>
-          <%= image_tag 'dog_head_icon.png', class: 'img-circle',
-              style: 'margin-right: 20px;',
-              size: '100x100' %>
-          <h3>Organize and manage your micro teams.</h3>
-          <h3>To add MiaDo to your Slack account, just click on the button below.</h3>
-          <br><br>
-          <p>
-            <a href="<%= new_user_registration_path(oauth: 'slack') %>">
-              <img alt="Add to Slack" height="40" width="139"
-                   src="https://platform.slack-edge.com/img/add_to_slack.png"
-                   srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" />
-            </a>
-          </p>
-          <br>
-          <h4><%= "#{Team.count} registered active #{'team'.pluralize(Team.count)}!" %></h4>
-          <br>
-          <h5><mark>MiaDo is beta software. Please report bugs to admin@miado.net</mark></h5>
+      <div class="col-md-4 col-md-offset-4">
+        <div class="jumbotron">
+          <center>
+            <h1><a href="<%= root_path %>"
+                   style="color: black; text-decoration: none; cursor: default;">
+                  MiaDo
+                </a>
+            </h1>
+            <%= image_tag 'dog_head_icon.png', class: 'img-circle',
+                style: '',
+                size: '100x100' %>
+         </center>
+       </div>
+      </div>
+  </div>
 
-       </center>
-     </div>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <center>
+        <h3>Simple Task Management for Slack Teams</h3>
+      </center>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4">
+      <center>
+        <br>
+        <p>
+          <a href="<%= new_user_registration_path(oauth: 'slack') %>">
+            <img alt="Add to Slack" height="60" width="200"
+                 src="https://platform.slack-edge.com/img/add_to_slack.png"
+                 srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" />
+          </a>
+        </p>
+      </center>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4">
+      <center>
+       <h2>Simple to use</h2>
+       <p>Add and assign a task with a due date, all in one quick entry.
+       </p>
+       <%= image_tag 'miado_entry.png', class: 'img-responsive img-rounded',
+           style: '',
+           size: ''
+       %>
+     </center>
+    </div>
+    <div class="col-md-4">
+      <center>
+       <h2>Your Taskbot</h2>
+         <p>Alerts you to new assignments
+         </p>
+         <%= image_tag 'direct_message2.png', class: 'img-responsive img-rounded',
+             style: '',
+             size: ''
+         %>
+      </center>
+    </div>
+    <div class="col-md-4">
+      <center>
+       <h2>Simple to track</h2>
+         <p>One click on TaskBot to see all the tasks assigned to you.
+         </p>
+         <%= image_tag 'miado_list_me.png', class: 'img-responsive img-rounded',
+             style: '',
+             size: ''
+         %>
+      </center>
+    </div>
    </div>
   </div>
+
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4">
+      <center>
+        <h2>Simple to Manage</h2>
+          <p>See tasks for individuals or the whole team, balance workloads
+          </p>
+          <%= image_tag 'miado_list_all.png', class: 'img-responsive img-rounded',
+              style: '',
+              size: ''
+          %>
+      </center>
+    </div>
+  </div>
+
 </div>
