[WIP]18.add2slack: Change some text to look better on mobile.

--- a/app/views/pages/add_to_slack.html.erb
+++ b/app/views/pages/add_to_slack.html.erb
@@ -8,9 +8,9 @@
         </a>
     </h1>
     <%= image_tag 'dog_head_icon.png', class: 'img-rounded img-responsive center-block',
-        
+
         size: '100x100' %>
-    <h3>Simple Task Management for Slack Teams</h3>
+    <h3>Simple Task Management<br>in Slack</h3>
     <p>
       <a href="<%= new_user_registration_path(oauth: 'slack') %>">
         <img alt="Add to Slack" height="60" width="200"
