--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>MiaDo</title>
+  <!-- ==== Begin: HTML HEAD TAG === -->
   <meta charset="utf-8">
+  <title>MiaDo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <% if @view.policy(:include, :asset_pipeline) # Note: policy defined in pages_controller %>
+    <% # Rails assest pipeline per: http://guides.rubyonrails.org/asset_pipeline.html %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <% else %>
+    <!-- Dont use rails asset pipeline because of conflict with bootstrap responsive -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <% end %>
+  <%= csrf_meta_tags %>
+  <!-- ==== End: HTML HEAD TAG === -->
 </head>
-<body>
+<body class="css-<%= @view.name %>" >
 
-  <!-- # == Begin: yield :Page Main Body Content AtLast -Default- == -->
-  <%= yield %>
-  <!-- # == End: yield :Page Main Body Content AtLast -Default- == -->
+  <% # ===== MiaDo Page LAYOUT: ====   %>
+  <% # Note: default/global content can be override via content_for/yeild hooks %>
+  <% #------------------------------------------------------- %>
+  <% # Section0: (CSS: doc#header) -Global- %>
+    <% # <header> Page Header  %>
+    <% if @view.policy(:include, :header) # Note: policy defined in pages_controller %>
+      <%= render 'layouts/page_header' %>
+       <% # <nav> Page Header navigation  %>
+    <% end %>
+
+  <% #------------------------------------------------------- %>
+  <% # Section1: (CSS: doc#main) -Global- %>
+    <% # <main> Page Content  %>
+    <% if @view.policy(:include, :main) # Note: policy defined in pages_controller %>
+      <%= render 'layouts/page_main' %>
+       <% # <main> Page body  %>
+    <% else %>
+      <!-- # == Begin: yield :Page Main Body Content AtLast -Default- == -->
+      <%= yield %>
+      <!-- # == End: yield :Page Main Body Content AtLast -Default- == -->
+    <% end %>
+
+  <% #------------------------------------------------------- %>
+  <% # Section2: (CSS: doc#footer) Global %>
+    <% # <footer> Page Footer %>
+    <% if @view.policy(:include, :footer) # Note: policy defined in pages_controller %>
+      <%= render 'layouts/page_footer' %>
+        <% # <nav> Page Footer navigation  %>
+    <% end %>
+  <% #------------------------------------------------------- %>
 
 </body>
 </html>
