--- a/app/views/pages/welcome_add_to_slack_new.html.erb
+++ b/app/views/pages/welcome_add_to_slack_new.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="jumbotron">
         <center>
-          <h1><a href="<%= root_path %>"
+          <h1><a href="<%= admin_path %>"
                  style="color: black; text-decoration: none; cursor: default;">
             MiaDo
           </a>
