--- a/app/views/layouts/_page_header_navbar_right.html.erb
+++ b/app/views/layouts/_page_header_navbar_right.html.erb
@@ -19,10 +19,9 @@
                 <i class="glyphicon glyphicon-cog glyph-1-5x"> </i>&nbsp;<% end %>
       <% end %>
         </li>
-
     <% else %>
-        <li><%= link_to 'Sign In', new_user_session_path %></li>
-        <li><%= link_to '|', '' %></li>
+        <% #<li><%= link_to 'Sign In', new_user_session_path %#></li> %>
+        <% #<li><%= link_to '|', '' %#></li> %>
         <% #<li><%= link_to 'Sign Up', new_user_registration_path %#></li> %>
         <li><%= link_to 'Sign Up', add_to_slack_path %></li>
     <% end %>
