--- a/app/views/layouts/_page_header_navbar_left.html.erb
+++ b/app/views/layouts/_page_header_navbar_left.html.erb
@@ -1,7 +1,7 @@
 <div class="css-navbar-left">
   <ul class="nav navbar-nav">
     <li><%= image_tag 'dog_head_icon.png', size: '50x50' %></li>
-    <li><%= link_to 'MiaDo', root_path, class: 'navbar-brand' %></li>
+    <li><%= link_to 'MiaDo', welcome_path, class: 'navbar-brand' %></li>
 
   <% if @view.user_signed_in? %>
     <li><%= link_to user_teams_path(@view.current_user) do %>
